fix: docs generation
